Mark all Lists in model as unmodifiable